--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -537,7 +537,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** the logistic regression model performs very well in predicting both healthy loans (label \"0\") and high-risk loans (label \"1\"). The model has high precision and recall for both classes, resulting in an overall accuracy of 99% and strong F1-scores"
    ]
   },
   {
@@ -719,7 +719,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** the logistic regression model seems to be performing very well  particularly in correctly identifying healthy loans (label \"0\"). For high-risk loans (label \"1\"), while the precision is little bit  lower, the model compensates with a high recall, resulting in a strong overall performance."
    ]
   }
  ],
